<resources>
    <string name="app_name">Me Here</string>
    <string name="title_earth_fragment">Hello There</string>
    <string name="label_empty" />
    <string name="label_earth_fragment">Earth Fragment</string>
    <string name="label_title">Title</string>
    <string name="label_zoom_with_parameter">Zoom: %s</string>
    <string name="label_location_with_parameters">%s %s %s</string>
    <string name="label_point_info_with_parameter">%s - %s</string>
    <string name="label_points_with_parameter">Points: %d</string>
    <string name="format_longitude">%1$.3f°</string>
    <string name="format_latitude">%1$.3f°</string>
    <string name="format_altitude">%1$.0fm</string>
    <string name="format_zoom">%1$.0f</string>
    <string name="label_about_with_parameters">Me Here, Version %1$s\nCopyright © STHO\n2020</string>
    <string name="label_new_point_info">The new point of interest will be displayed at the given location.</string>
    <string name="label_close">Close</string>

    <!-- Actions Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_home">Define as Home</string>
    <string name="action_reset">Reset Configuration</string>
    <string name="action_orientation">Display Orientation</string>
    <string name="action_about">About…</string>

    <!-- Home Preferences -->
    <string name="home_header">Home</string>
    <string name="home_latitude_title">Latitude</string>
    <string name="home_longitude_title">Longitude</string>

    <!-- Location Preferences -->
    <string name="location_header">Location</string>
    <string name="orientation_header">Orientation</string>
    <string name="orientation_sensor_title">Device Orientation</string>
    <string name="orientation_sensor_summary_on">Use magnetic field sensor to show device orientation</string>
    <string name="orientation_sensor_summary_off">Do not use magnetic field sensor</string>
    <string name="location_service_title">Your Location</string>
    <string name="location_service_summary_on">Use location service to show your current location</string>
    <string name="location_service_summary_off">Do not use location service</string>
    <string name="location_tracking_title">Tracking</string>
    <string name="location_tracking_summary_on">Automatically update map position</string>
    <string name="location_tracking_summary_off">Do not update map position automatically</string>
    <string name="rotate_map_view_title">Rotate map view</string>
    <string name="rotate_map_view_summary_off">Do not rotate map view automatically</string>
    <string name="rotate_map_view_summary_on">Automatically rotate map view</string>
    <string name="action_transparency">Transparency</string>
    <string name="action_network">Network</string>
    <string name="action_save">SAVE</string>
    <string name="action_delete">DELETE</string>
    <string name="action_start_capture">Start Capture</string>
    <string name="action_stop_capture">Stop Capture</string>
    <string name="action_capture_current_location">Capture Here</string>
    <string name="label_dummy">Dummy Text</string>
    <string name="default_points">23 Points</string>
</resources>
