<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/home_header">

        <EditTextPreference
            app:key="latitude"
            app:title="@string/home_latitude_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="longitude"
            app:title="@string/home_longitude_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/location_header">

        <SwitchPreferenceCompat
            app:key="orientation"
            app:defaultValue="true"
            app:summaryOff="@string/orientation_sensor_summary_off"
            app:summaryOn="@string/orientation_sensor_summary_on"
            app:title="@string/orientation_sensor_title" />

        <SwitchPreferenceCompat
            app:key="location"
            app:defaultValue="true"
            app:summaryOff="@string/location_service_summary_off"
            app:summaryOn="@string/location_service_summary_on"
            app:title="@string/location_service_title" />

        <SwitchPreferenceCompat
            app:dependency="location"
            app:key="tracking"
            app:summaryOff="@string/location_tracking_summary_off"
            app:summaryOn="@string/location_tracking_summary_on"
            app:title="@string/location_tracking_title" />

    </PreferenceCategory>

</PreferenceScreen>