<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stho.mehere.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_home"
        android:orderInCategory="150"
        android:title="@string/action_home"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_setAlpha"
        android:orderInCategory="170"
        android:title="@string/action_set_alpha"
        android:icon="@drawable/alpha"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_networkStatus"
        android:orderInCategory="130"
        android:title="@string/action_network"
        android:icon="@drawable/offline"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/action_orientation"
        android:orderInCategory="200"
        android:title="@string/action_orientation"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="250"
        android:title="@string/action_reset"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>